force-app/src/objects/c2g__CombinationRuleLineItem__c.object
<CustomObject>
    <description>Stores the exact dimension values required for a combination rule.</description>
    <fields>
        <fullName>c2g__CombinationRule__c</fullName>
        <description>Master-Detail link to the related Combination Rule record.</description>
        <label>Combination Rule</label>
        <referenceTo>c2g__CombinationRule__c</referenceTo>
        <relationshipLabel>Combination Rule Line Items</relationshipLabel>
        <relationshipName>CombinationRuleLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension1Value__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to Dimension 1. If specified, that value is required for dimension 1.</description>
        <label>Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Combination Rule Line Items</relationshipLabel>
        <relationshipName>CombinationRuleLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension2Value__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to Dimension 2. If specified, that value is required for dimension 2.</description>
        <label>Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Combination Rule Line Items</relationshipLabel>
        <relationshipName>CombinationRuleLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension3Value__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to Dimension 3. If specified, that value is required for dimension 3.</description>
        <label>Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Combination Rule Line Items</relationshipLabel>
        <relationshipName>CombinationRuleLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__HashCode__c</fullName>
        <label>Hash Code</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <label>Combination Rule Line Item</label>
    <nameField>
        <displayFormat>CRLI-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Combination Rule Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>